--- a/rnap_2024_II_exercises_and_examples_numpy.ipynb
+++ b/rnap_2024_II_exercises_and_examples_numpy.ipynb
@@ -884,6 +884,371 @@
         "- El modelo aprendió una línea recta cercana a:\n",
         "$$y=4.22+2.97x$$"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# **2.Examples:python functions and classes**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 1.Simple Function\n",
+        " Esta función genera un saludo personalizado al recibir un nombre como argumento."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Hello, Ana!\n"
+          ]
+        }
+      ],
+      "source": [
+        "def greet(name):\n",
+        "    return \"Hello, \" + name + \"!\"\n",
+        "\n",
+        "print(greet(\"Ana\"))  # Output: Hello, Ana!"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- La función `greet` toma un parámetro `name`.\n",
+        "\n",
+        "- Retorna una cadena que concatena `\"Hello, \"` con el nombre y un signo de exclamación.\n",
+        "\n",
+        "- Al ejecutar` greet(\"Ana\")`, el resultado es `\"Hello, Ana!\"`."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 2. Function with Parameters and Return\n",
+        " Esta función suma dos números y devuelve el resultado."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "12\n"
+          ]
+        }
+      ],
+      "source": [
+        "def add_numbers(a,b):\n",
+        "    sum= a+b\n",
+        "    return sum\n",
+        "result=add_numbers(5,7)\n",
+        "print(result)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- `add_numbers` recibe dos parámetros `a` y `b`.\n",
+        "\n",
+        "- Suma ambos valores y almacena el resultado en la variable `sum`.\n",
+        "\n",
+        "- Devuelve el valor de `sum`.\n",
+        "\n",
+        "- En este caso, `5 + 7 = 12`, por lo que el resultado es `12`.\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 3. Function with Default Parameter\n",
+        " Esta función eleva un número (`base`) a una potencia (`exponent`). Si no se proporciona el exponente, se utiliza 2 por defecto.\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "9\n",
+            "8\n"
+          ]
+        }
+      ],
+      "source": [
+        "def power(base, exponent=2):\n",
+        "    return base ** exponent\n",
+        "print(power(3))  # Output: 9 (3^2)\n",
+        "print(power(2,3))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- Si solo se pasa un valor (`3`), se eleva al cuadrado por defecto: `3 ** 2 = 9`.\n",
+        "\n",
+        "- Si se pasan ambos valores (`2` y `3`), se calcula `2 ** 3 = 8`."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 4. Function with Multiple Returns\n",
+        " Esta función recibe una lista de números y devuelve el mínimo y el máximo.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "2 9\n"
+          ]
+        }
+      ],
+      "source": [
+        "def min_max(numbers):\n",
+        "    \n",
+        "    return min(numbers),max(numbers)\n",
+        "nums=[4,9,2,7,5]\n",
+        "minimum, maximum = min_max(nums)\n",
+        "print(minimum, maximum)  # Output: (2, 9)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- La función usa `min()` y `max()` para encontrar el valor más bajo y más alto de la lista.\n",
+        "\n",
+        "- Devuelve ambos valores como una tupla.\n",
+        "\n",
+        "- En este caso, el mínimo es `2` y el máximo es `9`."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "##  5. Function with Docstring\n",
+        " Esta función calcula el área de un rectángulo usando su largo y ancho, e incluye una descripción detallada en el docstring."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def area_of_rectangle(length, width):\n",
+        " \n",
+        " \"\"\"\n",
+        " Calculates the area of a rectangle.\n",
+        " Args:\n",
+        " length (float): The length of the rectangle.\n",
+        " width (float): The width of the rectangle.\n",
+        " Returns:\n",
+        " float: The area of the rectangle.\n",
+        " \"\"\"\n",
+        " return length * width"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- El docstring explica qué hace la función, qué argumentos recibe y qué retorna.\n",
+        "\n",
+        "- Multiplica `length` por `width` para calcular el área."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 6. Creación de una clase simple: `Dog`\n",
+        "Esta clase representa un perro con nombre y edad, y tiene un método para ladrar."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Buddy is barking!\n"
+          ]
+        }
+      ],
+      "source": [
+        "class Dog:\n",
+        " def __init__(self, name, age):\n",
+        "\n",
+        "  \n",
+        "    self.name = name\n",
+        "    self.age = age\n",
+        " def bark(self):\n",
+        "   \n",
+        "    print(f\"{self.name} is barking!\")\n",
+        " # Create an instance of the Dog class\n",
+        "dog1 = Dog(\"Buddy\", 3)\n",
+        "dog1.bark() # Output: Buddy is barking!"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- `__init__` es el constructor que inicializa los atributos `name` y `age`.\n",
+        "\n",
+        "- El método `bark `imprime un mensaje indicando que el perro está ladrando.\n",
+        "\n",
+        "- Al crear un perro llamado `\"Buddy\"` de 3 años y llamar `bark()`, se imprime` \"Buddy is barking!\"`."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 7. Agregar métodos y atributos: Student\n",
+        " Esta clase representa a un estudiante que puede tener una lista de calificaciones y calcular el promedio."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 12,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Alice's average grade: 88.5\n"
+          ]
+        }
+      ],
+      "source": [
+        "class Student:\n",
+        "    def __init__(self, name, age):\n",
+        "        self.name = name\n",
+        "        self.age = age\n",
+        "        self.grades = []\n",
+        "\n",
+        "    def add_grade(self, grade):\n",
+        "        self.grades.append(grade)\n",
+        "\n",
+        "    def get_average_grade(self):\n",
+        "        return sum(self.grades) / len(self.grades)\n",
+        "\n",
+        "# Crear una instancia de Student y agregar calificaciones\n",
+        "student1 = Student(\"Alice\", 18)\n",
+        "student1.add_grade(85)\n",
+        "student1.add_grade(92)\n",
+        "\n",
+        "average_grade = student1.get_average_grade()\n",
+        "print(f\"{student1.name}'s average grade: {average_grade}\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- La clase tiene atributos `name`, `age` y `grades`.\n",
+        "\n",
+        "- `add_grade` agrega una calificación a la lista.\n",
+        "\n",
+        "- `get_average_grade` calcula el promedio de calificaciones.\n",
+        "\n",
+        "- El estudiante `\"Alice\"` obtiene un promedio de `(85 + 92) / 2 = 88.5`."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 8. Herencia en clases\n",
+        "Esta sección demuestra cómo una clase puede heredar de otra para compartir y extender funcionalidades."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Whiskers says Meow!\n",
+            "Buddy says Woof!\n"
+          ]
+        }
+      ],
+      "source": [
+        "class Animal:\n",
+        "    def __init__(self, name):\n",
+        "        self.name = name\n",
+        "\n",
+        "    def speak(self):\n",
+        "        pass  # Placeholder for subclasses to override\n",
+        "\n",
+        "class Cat(Animal):\n",
+        "    def speak(self):\n",
+        "        print(f\"{self.name} says Meow!\")\n",
+        "\n",
+        "class Dog(Animal):\n",
+        "    def speak(self):\n",
+        "        print(f\"{self.name} says Woof!\")\n",
+        "\n",
+        "# Crear instancias de Cat y Dog\n",
+        "cat = Cat(\"Whiskers\")\n",
+        "dog = Dog(\"Buddy\")\n",
+        "\n",
+        "cat.speak()  # Output: Whiskers says Meow!\n",
+        "dog.speak()  # Output: Buddy says Woof!\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- `Animal` es la clase base con un método `speak` vacío.\n",
+        "\n",
+        "- `Cat` y `Dog` son subclases que sobrescriben el método `speak`.\n",
+        "\n",
+        "- Cada clase imprime un sonido característico según el tipo de animal."
+      ]
     }
   ],
   "metadata": {
