--- a/rnap_2024_II_exercises_and_examples_numpy.ipynb
+++ b/rnap_2024_II_exercises_and_examples_numpy.ipynb
@@ -32,7 +32,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 35,
       "metadata": {
         "id": "JrciqVNelazN"
       },
@@ -63,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 36,
       "metadata": {},
       "outputs": [
         {
@@ -96,7 +96,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 37,
       "metadata": {},
       "outputs": [
         {
@@ -123,7 +123,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 38,
       "metadata": {},
       "outputs": [
         {
@@ -162,7 +162,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 39,
       "metadata": {},
       "outputs": [
         {
@@ -188,7 +188,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 40,
       "metadata": {},
       "outputs": [
         {
@@ -221,7 +221,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 41,
       "metadata": {},
       "outputs": [
         {
@@ -252,7 +252,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 42,
       "metadata": {},
       "outputs": [
         {
@@ -284,7 +284,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 43,
       "metadata": {},
       "outputs": [
         {
@@ -325,7 +325,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 44,
       "metadata": {},
       "outputs": [
         {
@@ -352,7 +352,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 45,
       "metadata": {},
       "outputs": [
         {
@@ -391,7 +391,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 46,
       "metadata": {},
       "outputs": [
         {
@@ -446,7 +446,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 47,
       "metadata": {},
       "outputs": [
         {
@@ -497,7 +497,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 48,
       "metadata": {},
       "outputs": [
         {
@@ -538,7 +538,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 49,
       "metadata": {},
       "outputs": [
         {
@@ -583,7 +583,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 50,
       "metadata": {},
       "outputs": [
         {
@@ -634,7 +634,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 51,
       "metadata": {},
       "outputs": [
         {
@@ -683,7 +683,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 52,
       "metadata": {},
       "outputs": [
         {
@@ -725,7 +725,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 53,
       "metadata": {},
       "outputs": [
         {
@@ -775,7 +775,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 54,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -798,7 +798,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 55,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -816,7 +816,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 56,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -835,7 +835,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 57,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -852,7 +852,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 58,
       "metadata": {},
       "outputs": [
         {
@@ -902,7 +902,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 59,
       "metadata": {},
       "outputs": [
         {
@@ -941,7 +941,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 60,
       "metadata": {},
       "outputs": [
         {
@@ -985,7 +985,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 61,
       "metadata": {},
       "outputs": [
         {
@@ -1023,7 +1023,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 62,
       "metadata": {},
       "outputs": [
         {
@@ -1064,7 +1064,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 63,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1100,7 +1100,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 64,
       "metadata": {},
       "outputs": [
         {
@@ -1147,7 +1147,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 65,
       "metadata": {},
       "outputs": [
         {
@@ -1203,7 +1203,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 66,
       "metadata": {},
       "outputs": [
         {
@@ -1248,6 +1248,491 @@
         "- `Cat` y `Dog` son subclases que sobrescriben el método `speak`.\n",
         "\n",
         "- Cada clase imprime un sonido característico según el tipo de animal."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# **3 Exercises**\n",
+        "##  3.1 IndexingArraysinNumPy\n",
+        "1. Given theNumPy arrayarr=np.array([3,7,1,9,5]), perform\n",
+        "the following indexing operations:\n",
+        "\n",
+        "\n",
+        "**a)** Retrieve the third element of thearray\n",
+        "\n",
+        "\n",
+        " Creamos un array con los elementos dados."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 67,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1\n"
+          ]
+        }
+      ],
+      "source": [
+        "arr= np.array([3,7,1,9,5])\n",
+        "print(arr[2])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "El tercer elemento se encuentra en el índice 2 (porque los índices comienzan en 0)."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**b)** Slice th earray to get elements from index 1 to index 3."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 68,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[7 1]\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(arr[1:3])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "El slicing `arr[inicio:fin]` incluye el índice `inicio` pero no incluye el índice `fin`.\n",
+        "$$[7,1]$$"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 69,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[ 3  7  1 12  5]\n"
+          ]
+        }
+      ],
+      "source": [
+        "arr[3]=12\n",
+        "print(arr)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "`arr[3]` corresponde al cuarto elemento (`9`), que será reemplazado por `12`."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 2. Create a 2D NumPy array `matrix` with the following values\n",
+        "\n",
+        "Este ejercicio utiliza una **matriz 2D en NumPy** (una lista de listas) para  acceder a elementos específicos y  hacer **slicing** (submatrices).  \n",
+        "La matriz dada es:\n",
+        "$$\n",
+        "\\begin{bmatrix}\n",
+        "1 & 2 & 3 \\\\\n",
+        "4 & 5& 6 \\\\\n",
+        "7&8&9\n",
+        "\\end{bmatrix}\n",
+        "$$\n",
+        "\n",
+        "**a)** Retrieve the element in the second row and third column\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 70,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "6\n"
+          ]
+        }
+      ],
+      "source": [
+        "arr=np.array([[1,2,3],[4,5,6],[7,8,9]])\n",
+        "print(arr[1,2])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "En Python, los índices comienzan desde 0.\n",
+        "\n",
+        "\n",
+        "``arr[1, 2]`` accede a la segunda fila (``[4, 5, 6]``) y a su tercer elemento (``6``).\n",
+        "\n",
+        "**b)** Slice the matrix to get the submatrix consisting of the first two rows and all columns"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 71,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[[1 2 3]\n",
+            " [4 5 6]]\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(arr[0:2,:])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "``arr[0:2, :]`` selecciona desde la fila 0 hasta la 1 (la fila 2 no se incluye).\n",
+        "\n",
+        "El ``:`` en las columnas significa todas las columnas.\n",
+        "## 3.2 Indexing and Slicing Higher-Dimensional Tensors\n",
+        " Consider the following 3D tensor representing a stack of matrices:\n",
+        "\n",
+        "$$\n",
+        "\\text{tensor} =\n",
+        "\\left[\n",
+        "\\begin{array}{cccc}\n",
+        "\\left[\n",
+        "\\begin{array}{cccc}\n",
+        "1 & 2 & 3 & 4 \\\\\n",
+        "5 & 6 & 7 & 8 \\\\\n",
+        "9 & 10 & 11 & 12\n",
+        "\\end{array}\n",
+        "\\right], &\n",
+        "\\left[\n",
+        "\\begin{array}{cccc}\n",
+        "13 & 14 & 15 & 16 \\\\\n",
+        "17 & 18 & 19 & 20 \\\\\n",
+        "21 & 22 & 23 & 24\n",
+        "\\end{array}\n",
+        "\\right], &\n",
+        "\\left[\n",
+        "\\begin{array}{cccc}\n",
+        "25 & 26 & 27 & 28 \\\\\n",
+        "29 & 30 & 31 & 32 \\\\\n",
+        "33 & 34 & 35 & 36\n",
+        "\\end{array}\n",
+        "\\right]\n",
+        "\\end{array}\n",
+        "\\right]\n",
+        "$$\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 72,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[[[ 1  2  3  4]\n",
+            "  [ 5  6  7  8]\n",
+            "  [ 9 10 11 12]]\n",
+            "\n",
+            " [[13 14 15 16]\n",
+            "  [17 18 19 20]\n",
+            "  [21 22 23 24]]\n",
+            "\n",
+            " [[25 26 27 28]\n",
+            "  [29 30 31 32]\n",
+            "  [33 34 35 36]]]\n"
+          ]
+        }
+      ],
+      "source": [
+        "tensor= np.array([[[1,2,3,4],[5,6,7,8],[9,10,11,12]],[[13,14,15,16],[17,18,19,20],[21,22,23,24]],[[25,26,27,28],[29,30,31,32],[33,34,35,36]]])\n",
+        "print(tensor)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**1.** Retrieve the element at the position (1, 0, 2) within the tensor"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 73,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "15\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(tensor[1,0,2])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- Primer índice ``1`` → segunda \"matriz\"\n",
+        "\n",
+        "- Segundo índice ``0`` → primera fila\n",
+        "\n",
+        "- Tercer índice ``2`` → tercer elemento → 15"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**2.** Slice the tensor to obtain the 3×4 sub-tensor that corresponds to the second “matrix” (slice along the first dimension)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 74,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[[13 14 15 16]\n",
+            " [17 18 19 20]\n",
+            " [21 22 23 24]]\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(tensor[1])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- ``tensor[1]`` selecciona la segunda matriz completa (índice 1)\n",
+        "\n",
+        "- Tiene forma 3×4: 3 filas, 4 columnas\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**3.** Slice the tensor to obtain the 2×4 sub-tensor that corresponds to the last row of the last two matrices"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 75,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[[21 22 23 24]\n",
+            " [33 34 35 36]]\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(tensor[1:,2,:])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "``1:`` → selecciona las últimas dos matrices\n",
+        "\n",
+        "``2`` → tercera fila (índice 2) en cada una de esas matrices\n",
+        "\n",
+        "``:`` → todas las columnas\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**4.** Retrieve the element at the position (2, 1, 3) within the tensor"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 76,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "32\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(tensor[2,1,3])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "``2`` → tercera matriz\n",
+        "\n",
+        "``1`` → segunda fila\n",
+        "\n",
+        "``3`` → cuarto elemento → ``32``\n",
+        "\n",
+        "\n",
+        "**5.** Slice the tensor to obtain the 2×4 sub-tensor that corresponds to the first row of the last two matrices"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 77,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[[13 14 15 16]\n",
+            " [25 26 27 28]]\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(tensor[1:,0,:])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "``1:`` → últimas dos matrices\n",
+        "\n",
+        "``0`` → primera fila de cada una\n",
+        "\n",
+        "``:`` → todas las columnas"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# **3.3 Defining Functions in Python**\n",
+        "**1.** Write a Python function calculate\n",
+        " average that takes a list of numbers\n",
+        " as input and returns the average of those numbers."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 80,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "7.0\n"
+          ]
+        }
+      ],
+      "source": [
+        "def calculate_average(numbers):\n",
+        "    a=sum(numbers)/len(numbers)\n",
+        "    return a\n",
+        "data=[4,8,10,6]\n",
+        "resultado=calculate_average(data)\n",
+        "print(resultado) \n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "``sum(numbers)`` suma todos los elementos: 4 + 8 + 10 + 6 = 28\n",
+        "\n",
+        "``len(numbers)`` cuenta cuántos elementos hay: 4\n",
+        "\n",
+        "El promedio es 28 / 4 = ``7.0``"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 83,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "9\n",
+            "8\n"
+          ]
+        }
+      ],
+      "source": [
+        "def find_power(base,exponent=2):\n",
+        "    return base**exponent\n",
+        "print(find_power(3))\n",
+        "print( find_power(2, 3))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "``find_power(3)`` → 3^2 = 9, porque usa el valor por defecto ``exponent = 2``\n",
+        "\n",
+        "``find_power(2, 3)`` → 2^3 = 8, porque pasamos el exponente manualmente"
       ]
     }
   ],
